backend/gateway/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  ports:
  - name: http
    targetPort: 9004
    port: 80
  selector:
    app: gateway
