backend/gateway/gateway-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gateway.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway-service
          servicePort: http
